--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -98,7 +98,7 @@
     <h2 class="text-center">Important Links</h2>
     <div class="container"></div>
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
-            <div class="col-2">
+            <div class="col">
                 <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">REPOSITORY</a>
             </div>
         </div>
