--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -46,8 +46,7 @@
             document.getElementById('hexadecimal').innerHTML = parseInt(binary, 2).toString(16);
             // DOM assignment to Decimal conversion
             document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString(10);
-            let ascii = String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
-            document.getElementById('ASCII').innerHTML = ascii;
+            document.getElementById('UNICODE').innerHTML = "U+" + parseInt(binary, 2).toString(16);
             /* Hack: show ASCII printable character(s) for each 8 bits
              DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
              below ASCII for more ideas of where to make changes
@@ -140,7 +139,7 @@
                         <th>Hexadecimal</th>
                         <th>Decimal</th>
                         <!-- Hack: display ASCII label for printable character(s)  -->
-                        <th>ASCII</th>
+                        <th>UNICODE</th>
                         <th>Minus</th>
                     </tr>
                     <tr>
@@ -149,7 +148,7 @@
                         <td id="octal">0</td>
                         <td id="hexadecimal">0</td>
                         <td id="decimal">0</td>
-                        <td id="ASCII">0</td>
+                        <td id="UNICODE">0</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
 
