--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -37,8 +37,7 @@
             for(let i = 0; i < BITS; i++) {
                 bits = bits + document.getElementById('digit' + i).value;
             }
-            bin_a=bin(bits)
-            return bin_a;
+            return bits;
         }
         // setter for DOM values
         function setConversions(binary) {
@@ -91,48 +90,48 @@
             {#    image.src = "{{ imgBulbOn2 }}";#}
             {#    butt.innerHTML = "{{ msgTurnOff }}";#}
             {#}#}
-            if (image.src.match("{{ imgBulbOffU }}")) {
+            if (image.src.match("{{ imgBulbOnU }}")) {
                 dig.value = 0;
-                image.src = "{{ imgBulbOnU }}";
+                image.src = "{{ imgBulbOffU }}";
                 butt.innerHTML = "{{ msgTurnOn }}";
             } else {
                 dig.value = 1;
-                image.src = "{{ imgBulbOffU }}";
-                butt.innerHTML = "{{ msgTurnOn }}";
+                image.src = "{{ imgBulbOnU }}";
+                butt.innerHTML = "{{ msgTurnOff }}";
             }
             // Binary numbers
             const binary = getBits();
             setConversions(binary);
         }
-        function unsignedaddition(n) {
-            let binary = getBits();
-            // convert to decimal and do math
-            let decimal = parseInt(binary, 2);
-            if (n > 0) {  // PLUS
-                decimal = MAX === decimal ? 0 : decimal *= n; // I DONT KNOW WHAT IT DOES OTHER THAN *(n)
-            } else  {     // MINUS
-                decimal = 0 === decimal ? MAX : decimal *= n; // ??? OVERFLOW??
-            }
-            // convert the result back to binary
-            binary = decimal_2_base(decimal, 2);
-            // update conversions
-            setConversions(binary);
-            // ascii?
-            // update bits
-            for (let i = 0; i < binary.length; i++) {
-                let digit = binary.substr(i, 1);
-                document.getElementById('digit' + i).value = digit;
-                if (digit === "1") {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOn2 }}";
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOnU }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
-                } else {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOff2 }}";
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOffU }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
-                }
-            }
-        }
+        {#function unsignedaddition(n) {#}
+        {#    let binary = getBits();#}
+        {#    // convert to decimal and do math#}
+        {#    let decimal = parseInt(binary, 2);#}
+        {#    if (n > 0) {  // PLUS#}
+        {#        decimal = MAX === decimal ? 0 : decimal *= n; // I DONT KNOW WHAT IT DOES OTHER THAN *(n)#}
+        {#    } else  {     // MINUS#}
+        {#        decimal = 0 === decimal ? MAX : decimal *= n; // ??? OVERFLOW??#}
+        {#    }#}
+        {#    // convert the result back to binary#}
+        {#    binary = decimal_2_base(decimal, 2);#}
+        {#    // update conversions#}
+        {#    setConversions(binary);#}
+        {#    // ascii?#}
+        {#    // update bits#}
+        {#    for (let i = 0; i < binary.length; i++) {#}
+        {#        let digit = binary.substr(i, 1);#}
+        {#        document.getElementById('digit' + i).value = digit;#}
+        {#        if (digit === "1") {#}
+        {#            document.getElementById('bulb' + i).src = "{{ imgBulbOn2 }}";#}
+        {#            document.getElementById('bulb' + i).src = "{{ imgBulbOnU }}";#}
+        {#            document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";#}
+        {#        } else {#}
+        {#            document.getElementById('bulb' + i).src = "{{ imgBulbOff2 }}";#}
+        {#            document.getElementById('bulb' + i).src = "{{ imgBulbOffU }}";#}
+        {#            document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";#}
+        {#        }#}
+        {#    }#}
+        {#}#}
         // add is positive integer, subtract is negative integer
         function add(n) {
             let binary = getBits();
@@ -200,7 +199,7 @@
                         <td id="UNICODE">0</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
-                        <td><button type="button" id="unsignedaddition" onclick="unsignedaddition(2)">+</button></td>
+                        <td><button type="button" id="add" onclick="add(2)">+</button></td>
 
                     </tr>
                 </table>
