--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -89,7 +89,7 @@
             {#    dig.value = 1;#}
             {#    image.src = "{{ imgBulbOn2 }}";#}
             {#    butt.innerHTML = "{{ msgTurnOff }}";#}
-            {#}#}
+
             if (image.src.match("{{ imgBulbOnU }}")) {
                 dig.value = 0;
                 image.src = "{{ imgBulbOffU }}";
@@ -209,31 +209,48 @@
                 <table class="table">
                     <tr>
                         {% for i in range(BITS) %}
-                            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOff2 }}" alt="" width="40" height="Auto">
-                                <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
-                            </td>
-                        {% endfor %}
-                    </tr>
-                    <tr>
-                        {% for i in range(BITS) %}
                             <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOffU }}" alt="" width="40" height="Auto">
                                 <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
                             </td>
                         {% endfor %}
                     </tr>
-                    <tr>
-                        {% for i in range(BITS) %}
-                            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOffU }}" alt="" width="40" height="Auto">
-                                <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
-                            </td>
-                        {% endfor %}
-                    </tr>
-
                     <tr>
                         {% for i in range(BITS) %}
                             <td><input type='text' id='digit{{i}}' Value="0" size="1" readonly></td>
                         {% endfor %}
                     </tr>
+
+                    <tr>
+                        {% for i in range(BITS, 2*BITS) %}
+                            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOffU }}" alt="" width="40" height="Auto">
+                                <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
+                            </td>
+                        {% endfor %}
+                    </tr>
+                    <tr>
+                        {% for i in range(BITS, 2*BITS) %}
+                            <td><input type='text' id='digit{{i}}' Value="0" size="1" readonly></td>
+                        {% endfor %}
+                    </tr>
+
+                    <tr>
+                        {% for i in range(2*BITS, 3*BITS) %}
+                            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOffU }}" alt="" width="40" height="Auto">
+                                <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
+                            </td>
+                        {% endfor %}
+                    </tr>
+                    <tr>
+                        {% for i in range(2*BITS, 3*BITS) %}
+                            <td><input type='text' id='digit{{i}}' Value="0" size="1" readonly></td>
+                        {% endfor %}
+                    </tr>
+
+{#                    <tr>#}
+{#                        {% for i in range(BITS, 3*BITS) %}#}
+{#                            <td><input type='text' id='digit{{i}}' Value="0" size="1" readonly></td>#}
+{#                        {% endfor %}#}
+{#                    </tr>#}
                 </table>
             </div>
 
@@ -261,7 +278,7 @@
 {#        </div>#}
 {#    </div>#}
 
-    </div>{% endblock %}
+{% endblock %}
 
 {% block background %}
 {% endblock %}
