--- a/templates/logicgate.html
+++ b/templates/logicgate.html
@@ -12,45 +12,70 @@
         }
         h1 {
             font-family: "Bebas Neue";
-            font-size: 69px;
+            font-size: 80px;
         }
         p {
             font-family: "Cutive Mono";
+            font-size: 20px;
         }
         label {
             font-family: "Cutive Mono";
+            font-size: 20px;
         }
         th {
             font-family: "Cutive Mono";
             font-weight: 900;
+            font-size: 25px
+        }
+        input {
+            width: 15px;
+            height: 15px;
+        }
+        table {
+            width: 100%;
+            class: center;
         }
     </style>
     <script>
         function logic() {
             var Atoggled = document.getElementById("A").checked
             var Btoggled = document.getElementById("B").checked
-            if ( Atoggled && Btoggled ) {
+            if ( Atoggled && Btoggled ) { // AND bitwise
                 document.getElementById("AND-result").innerHTML = "1"; // AND
                 document.getElementById("NAND-result").innerHTML = "0"; // NAND
+            } else {
+                document.getElementById("AND-result").innerHTML = "0"; // AND
+                document.getElementById("NAND-result").innerHTML = "1"; // NAND
             }
-            else if ( Atoggled || Btoggled ) {
+            if ( Atoggled || Btoggled ) { // OR bitwise
                 document.getElementById("OR-result").innerHTML = "1"; // OR
                 document.getElementById("NOR-result").innerHTML = "0"; // NOR
+            } else {
+                document.getElementById("OR-result").innerHTML = "0"; // OR
+                document.getElementById("NOR-result").innerHTML = "1"; // NOR
+            }
+            if ( Atoggled ^ Btoggled ) { // XOR bitwise
+                document.getElementById("XOR-result").innerHTML = "1"; // XOR
+                document.getElementById("XNOR-result").innerHTML = "0"; // XNOR
+            } else {
+                document.getElementById("XOR-result").innerHTML = "0"; // XOR
+                document.getElementById("XNOR-result").innerHTML = "1"; // XNOR
             }
         }
     </script>
     <div style="text-align: center">
+        <h1>Logic Gates</h1>
         <p>Select a Value! :):):)</p>
         <input type="checkbox" id="A" name="optionA" value="A" onclick="logic(this)">
         <label for="optionA">A</label>
         <input type="checkbox" id="B" name="optionB" value="B" onclick="logic(this)">
         <label for="optionA">B</label>
 
-        <table style="width: 100%; class: center">
+        <table>
             <tr>
-                <th>Symbol</th>
-                <th>Logic Gate</th>
-                <th>Result</th>
+                <th>SYMBOL</th>
+                <th>LOGIC GATE</th>
+                <th>RESULT</th>
             </tr>
             <tr id="AND">
                 <td><img src="/static/assets/logic/and.png"></td>
