--- a/templates/michael.html
+++ b/templates/michael.html
@@ -32,6 +32,8 @@
         <p>Minilab for RGB:
         <a style="font-family: 'Cutive Mono'; color: antiquewhite" href={{ url_for('michaelrgb') }}>michaelrgb.html</a> <br>
         Note, it takes a while for the html to load due to the file sizes of the images</p>
+        <p>Minilab for Logic gates:
+        <a style="font-family: 'Cutive Mono'; color: antiquewhite" href={{ url_for('logic') }}>logicgate.html</a> <br>
     </div>
 {% endblock %}
 
