--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -29,6 +29,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href={{ url_for('binary') }}>Binary</a>
                     <a class="dropdown-item" href={{ url_for('binary2') }}>Binary2</a>
                     <a class="dropdown-item" href={{ url_for('logic') }}>Logic Gates</a>
+                    <a class="dropdown-item" href={{ url_for('colorcode') }}>Color Code</a>
                 </div>
             </li>
         </ul>
