--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -48,7 +48,13 @@
             document.getElementById('hexadecimal').innerHTML = parseInt(binary, 2).toString(16);
             // DOM assignment to Decimal conversion
             document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString(10);
-            document.getElementById('UNICODE').innerHTML = "U+" + parseInt(binary, 2).toString(16);
+            document.getElementById('UNICODE').innerHTML =  String.fromCharCode(parseInt(binary, 2).toString(10));
+            if (parseInt(binary, 2).toString(10) < 128) {
+                document.getElementById('ASCII+UNICODE').innerText = "ASCII"
+            } else {
+                document.getElementById('ASCII+UNICODE').innerText = "UNICODE"
+            }
+
             /* Hack: show ASCII printable character(s) for each 8 bits
              DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
              below ASCII for more ideas of where to make changes
@@ -186,7 +192,7 @@
                         <th>Hexadecimal</th>
                         <th>Decimal</th>
                         <!-- Hack: display ASCII label for printable character(s)  -->
-                        <th>UNICODE</th>
+                        <th id="ASCII+UNICODE">ASCII</th>
                         <th>Minus</th>
                         <th>Unsigned Binary Addition</th>
                     </tr>
@@ -196,7 +202,7 @@
                         <td id="octal">0</td>
                         <td id="hexadecimal">0</td>
                         <td id="decimal">0</td>
-                        <td id="UNICODE">0</td>
+                        <td id="UNICODE">""</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
                         <td><button type="button" id="add" onclick="add(2)">+</button></td>
