--- a/templates/binary3.html
+++ b/templates/binary3.html
@@ -54,99 +54,94 @@
 
         }
 
-        function convertToBinary(x) {
-            let bin = 0;
-            let rem, i = 1, step = 1;
-            while (x != 0) {
-                rem = x % 2
-                x = parseInt(x / 2);
-                bin = bin + rem * i;
-                i = i * 10;
+            // setter for DOM values
+            function setConversions(binary, binary2) {
+                document.getElementById('binary').innerHTML = binary;
+                // DOM assignment to Octal conversion
+                document.getElementById('binary2').innerHTML = binary2;
+                // DOM assignment to Octal conversion
+
+                // TESTING IF STATEMENT (HACK 2)
             }
-            return bin
-        }
 
-        // setter for DOM values
-        function setConversions(binary, binary2) {
-            document.getElementById('binary').innerHTML = binary;
-            // DOM assignment to Octal conversion
-            document.getElementById('binary2').innerHTML = binary2;
-            // DOM assignment to Octal conversion
-
-            // TESTING IF STATEMENT (HACK 2)
-        }
-
-        // algorithm to convert decimal to base using division and remainder
-        function decimal_2_base(decimal, base) {
-            let conversion = "";
-            // loop to convert to base
-            do {
-                let digit = decimal % base;
-                conversion = "" + digit + conversion; // what does this do?
-                decimal = ~~(decimal / base);         // what does this do?  what is ~~?
-            } while (decimal > 0);                  // why while at the end?
-            // loop to pad with zeros
-            if (base === 2) {                        // only pad for binary conversions
-                for (let i = 0; conversion.length < BITS; i++) {
-                    conversion = "0" + conversion;
+            // algorithm to convert decimal to base using division and remainder
+            function decimal_2_base(decimal, base) {
+                let conversion = "";
+                // loop to convert to base
+                do {
+                    let digit = decimal % base;
+                    conversion = "" + digit + conversion; // what does this do?
+                    decimal = ~~(decimal / base);         // what does this do?  what is ~~?
+                } while (decimal > 0);                  // why while at the end?
+                // loop to pad with zeros
+                if (base === 2) {                        // only pad for binary conversions
+                    for (let i = 0; conversion.length < BITS; i++) {
+                        conversion = "0" + conversion;
+                    }
                 }
+                return conversion;
             }
-            return conversion;
-        }
 
-        // toggle selected bit and recalculate
-        function toggleBit(i) {
-            //alert("Digit action: " + i );
-            const dig = document.getElementById('digit' + i), image = document.getElementById('bulb' + i),
-                butt = document.getElementById('butt' + i);             // Change digit and visual
-            if (image.src.match("{{ imgBulbOn }}")) {
-                dig.value = 0;
-                image.src = "{{ imgBulbOff }}";
-                butt.innerHTML = "{{ msgTurnOn }}";
-            } else {
-                dig.value = 1;
-                image.src = "{{ imgBulbOn }}";
-                butt.innerHTML = "{{ msgTurnOff }}";
-            }
-            // Binary numbers
-            const binary = getBits();
-            const binary2 = getBits2();
-            setConversions(binary, binary2);
-        }
-
-        function setAdditions(num){
-            nums = "Integer: " + num.toString() + " Binary: " + num.toString(2)
-            document.getElementById('signed').innerHTML = nums;
-        }
-
-        // add is positive integer, subtract is negative integer
-        function add(n) {
-            let binary = getBits();
-            // convert to decimal and do math
-            let decimal = parseInt(binary, 2);
-            if (n > 0) {  // PLUS
-                decimal = MAX === decimal ? 0 : decimal += n; // OVERFLOW or PLUS
-            } else  {     // MINUS
-                decimal = 0 === decimal ? MAX : decimal += n; // OVERFLOW or MINUS
-            }
-            // convert the result back to binary
-            binary = decimal_2_base(decimal, 2);
-            // update conversions
-            setConversions(binary);
-            // ascii?
-            // update bits
-            for (let i = 0; i < binary.length; i++) {
-                let digit = binary.substr(i, 1);
-                document.getElementById('digit' + i).value = digit;
-                if (digit === "1") {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
+            // toggle selected bit and recalculate
+            function toggleBit(i) {
+                //alert("Digit action: " + i );
+                const dig = document.getElementById('digit' + i), image = document.getElementById('bulb' + i),
+                    butt = document.getElementById('butt' + i);             // Change digit and visual
+                if (image.src.match("{{ imgBulbOn }}")) {
+                    dig.value = 0;
+                    image.src = "{{ imgBulbOff }}";
+                    butt.innerHTML = "{{ msgTurnOn }}";
                 } else {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
+                    dig.value = 1;
+                    image.src = "{{ imgBulbOn }}";
+                    butt.innerHTML = "{{ msgTurnOff }}";
+                }
+                // Binary numbers
+                const binary = getBits();
+                const binary2 = getBits2();
+                setConversions(binary, binary2);
+            }
+
+            function setAdditions(num) {
+                var binary = ""
+                if(num < 0) {
+                    binary = binary + "1" + (num * -1).toString(2)
+                }
+                else {
+                    binary = binary + "0" + num.toString(2)
+                }
+                nums = "Integer: " + num.toString() + " Binary: " + binary
+                document.getElementById('signed').innerHTML = nums;
+            }
+
+            // add is positive integer, subtract is negative integer
+            function add(n) {
+                let binary = getBits();
+                // convert to decimal and do math
+                let decimal = parseInt(binary, 2);
+                if (n > 0) {  // PLUS
+                    decimal = MAX === decimal ? 0 : decimal += n; // OVERFLOW or PLUS
+                } else {     // MINUS
+                    decimal = 0 === decimal ? MAX : decimal += n; // OVERFLOW or MINUS
+                }
+                // convert the result back to binary
+                binary = decimal_2_base(decimal, 2);
+                // update conversions
+                setConversions(binary);
+                // ascii?
+                // update bits
+                for (let i = 0; i < binary.length; i++) {
+                    let digit = binary.substr(i, 1);
+                    document.getElementById('digit' + i).value = digit;
+                    if (digit === "1") {
+                        document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+                        document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
+                    } else {
+                        document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+                        document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
+                    }
                 }
             }
-        }
     </script>
 
 
