--- a/templates/colorcode.html
+++ b/templates/colorcode.html
@@ -21,12 +21,12 @@
     <br />
 
     <div class="row">
-        <div class="col-sm-1"></div> <!-- Jinja for loops to create buttons -->
+        <div class="col-sm-1"></div>
         {% for i in range(1, 9) %}
             <button class="col-sm-1" id="r{{i}}" onclick="toggleSwitch('r{{i}}')">0</button>
         {% endfor %}
         <div class="offset-sm-1 col-sm-2">
-            <p id="r">Decimal value: 0</p>
+            <p id="r">Decimal: 0</p>
         </div>
     </div>
 
@@ -38,7 +38,7 @@
             <button class="col-sm-1" id="g{{i}}" onclick="toggleSwitch('g{{i}}')">0</button>
         {% endfor %}
         <div class="offset-sm-1 col-sm-2">
-            <p id="g">Decimal value: 0</p>
+            <p id="g">Decimal: 0</p>
         </div>
     </div>
     <br />
@@ -48,13 +48,13 @@
             <button class="col-sm-1" id="b{{i}}" onclick="toggleSwitch('b{{i}}')">0</button>
         {% endfor %}
         <div class="offset-sm-1 col-sm-2">
-            <p id="b">Decimal value: 0</p>
+            <p id="b">Decimal: 0</p>
         </div>
     </div>
 
     <br />
 
-    <div class="offset-sm-1 col-sm-10" id="color" style="background-color: #000000; height: 20vh;">  <!-- Div that shows off color -->
+    <div class="offset-sm-1 col-sm-10" id="color" style="background-color: #000000; height: 20vh;">
     </div>
     <p style="text-align: center;" id="code">Hexcode: #000000</p>
 
@@ -65,28 +65,14 @@
         </div>
     </div>
 
-
 <script>
 
     var red = 0;
     var green = 0;
     var blue = 0;
 
-    function toggleSwitch (id) {     // toggles button between on and off
-        const element = document.getElementById(id);
-        if (element.innerHTML == "1") {
-            element.innerHTML = "0";
-        } else {
-            element.innerHTML = "1";
-        }
-        element.classList.toggle("buttonOn");
-        element.classList.toggle("buttonOff");
 
-        calculateRow(id.charAt(0));
-    }
-
-
-    function calculateRow (color) {    // function that calculates the decimal value for a certain row after one of its buttons is toggled
+    function totalRow (color) {    // function that calculates the decimal value for a certain row after one of its buttons is toggled
         let sum = 0;
         for (var i = 1; i <= 8; i++) {
             let element = document.getElementById(color + i);
@@ -124,8 +110,21 @@
             }
             let code = "#" + r + g + b;
             document.getElementById("color").style.backgroundColor = code;
-            document.getElementById("code").innerHTML = "Hexcode: " + code;
+            document.getElementById("code").innerHTML = "Hexcode = " + code;
         
+    }
+
+    function toggleSwitch (id) {     // toggles button between on and off
+        const element = document.getElementById(id);
+        if (element.innerHTML == "1") {
+            element.innerHTML = "0";
+        } else {
+            element.innerHTML = "1";
+        }
+        element.classList.toggle("On");
+        element.classList.toggle("Off");
+
+        totalRow(id.charAt(0));
     }
 
     function reset () {   // function to reset all buttons back to off
@@ -133,15 +132,15 @@
             document.getElementById('r' + i).innerHTML = "0";
             document.getElementById('g' + i).innerHTML = "0";
             document.getElementById('b' + i).innerHTML = "0";
-            calculateRow('r');
-            calculateRow('b');
-            calculateRow('g');
-            document.getElementById('r' + i).classList.add("buttonOff");
-            document.getElementById('g' + i).classList.add("buttonOff");
-            document.getElementById('b' + i).classList.add("buttonOff");
-            document.getElementById('r' + i).classList.remove("buttonOn");
-            document.getElementById('g' + i).classList.remove("buttonOn");
-            document.getElementById('b' + i).classList.remove("buttonOn");
+            totalRow('r');
+            totalRow('b');
+            totalRow('g');
+            document.getElementById('r' + i).classList.add("Off");
+            document.getElementById('g' + i).classList.add("Off");
+            document.getElementById('b' + i).classList.add("Off");
+            document.getElementById('r' + i).classList.remove("On");
+            document.getElementById('g' + i).classList.remove("On");
+            document.getElementById('b' + i).classList.remove("On");
         }
     }
     window.onload = reset();  // init buttons
