--- a/templates/colorcode2.html
+++ b/templates/colorcode2.html
@@ -31,31 +31,30 @@
         </div>
     </div>
 
-    <br />
 
     <div class="row">
         <div class="col-sm-1"></div>
-        {% for i in range(1, 9) %}
-            <button class="col-sm-1" id="g{{i}}" onclick="toggleCell('g{{i}}')">0</button>
+        {% for j in range(1, 9) %}
+            <button class="col-sm-1" id="g{{j}}" onclick="toggleCell('g{{j}}')">0</button>
         {% endfor %}
         <div class="offset-sm-1 col-sm-2">
             <p id="g">Decimal: 0</p>
         </div>
     </div>
-    <br />
+
+
     <div class="row">
         <div class="col-sm-1"></div>
-        {% for i in range(1, 9) %}
-            <button class="col-sm-1" id="b{{i}}" onclick="toggleCell('b{{i}}')">0</button>
+        {% for k in range(1, 9) %}
+            <button class="col-sm-1" id="b{{k}}" onclick="toggleCell('b{{k}}')">0</button>
         {% endfor %}
         <div class="offset-sm-1 col-sm-2">
             <p id="b">Decimal: 0</p>
         </div>
     </div>
 
-    <br />
 
-    <div class="offset-sm-1 col-sm-10" id="color" style="background-color: #000000; height: 10vh;">
+    <div class="offset-sm-1 col-sm-10" id="color" style="background-color: #000000; height: 50vh;">
     </div>
     <p style="text-align: center;" id="code">Hexcode: #000000</p>
 
@@ -69,7 +68,7 @@
     <script>
 
 
-        var colors = new Map(); //makes an array I think??
+        var colors = new Map(); //makes 2D array
         colors.set('r', 0);
         colors.set('g', 0);
         colors.set('b', 0);
