--- a/templates/binary.html
+++ b/templates/binary.html
@@ -46,9 +46,13 @@
     // DOM assignment to Hexadecimal conversion
     document.getElementById('hexadecimal').innerHTML = parseInt(binary, 2).toString(16);
     // DOM assignment to Decimal conversion
+    var decimal = parseInt(binary, 2).toString(10)
     document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString(10);
     // TESTING IF STATEMENT (HACK 2)
-    if (BITS <= 7) { // if statement should actually consider either the decimal value or bit length instead of the BITS input form result
+    if ( decimal <= 127 )  {
+        document.getElementById('ASCII').innerHTML = String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
+    }
+    if ( decimal <= 7) { // if statement should actually consider either the decimal value or bit length instead of the BITS input form result
         document.getElementById('ASCII').innerHTML = String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
         document.getElementById('UTF-8').style.display = 'none'; // PROBABLY A BETTER WAY TO DO THIS BUT ¯\_(ツ)_/¯
         document.getElementById('UTF-8-text').style.display = 'none';
