TABLE FOR PLANNER

--- a/templates/planner.html
+++ b/templates/planner.html
@@ -43,7 +43,34 @@
     <!-- button that leads to the repo, can style the button in css above -->
     <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Schedule and Calender (currently leads to github repo)</a>
 
-    <div class="container"></div>
+
+    <!-- TABLE TIME -->
+    <div class="container"  style="width: 100%">
+        <div class="row justify-content-md-center">
+            <div class="col-7">
+                <table class="table">
+                    <tr id="day">
+                        <th>Sunday</th>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                    </tr>
+                    <tr id="task">
+                        <td>task</td>
+                        <td>task</td>
+                        <td>task</td>
+                        <td>task</td>
+                        <td>task</td>
+                        <td>task</td>
+                        <td>task</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 
