--- a/templates/planner.html
+++ b/templates/planner.html
@@ -68,6 +68,26 @@
                         <td>task</td>
                     </tr>
                 </table>
+                    <div class="container">
+                        <div class="row justify-content-md-center">
+                            <div class="col-sm-2">
+                                <input type="radio" id="Yes" name="Yes or No" value="Yes">
+                                <a href="/binarywithdog/"> Yes </a>
+                            </div>
+                            <div class="col-sm-2">
+                                <input type="radio" id="No" name="Yes or No" value="No">
+                                <a href="/binarywithcat/"> No </a>
+                            </div>
+                        </div>
+                        <div class="row justify-content-md-center" >
+                            <div class="col-sm-2">
+                                <img src="/static/assets/yescsp.png" alt="Yes Picture" style="width: 100%; height: 100%;">
+                            </div>
+                            <div class="col-sm-2">
+                                <img src="/static/assets/nocsp.png" alt="No picture" style="width: 100%; height: 100%;">
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
