--- a/templates/planner.html
+++ b/templates/planner.html
@@ -70,7 +70,7 @@
                     </tr>
 
                     <tr class ="task" id="task">
-                        <td>task</td>
+                        <td>task</td>   <!use greet code for input box>
                         <td>task</td>
                         <td>task</td>
                         <td>task</td>
@@ -80,12 +80,13 @@
                     </tr>
                     <tr class ="complete" id="complete">
                         <td> <h6>Are You Done?</h6>
-                            <form action="/action_page.php">
+                            <form>
                                 <input type="checkbox" id="complete1" name="complete1" value="Yes">
                                 <label for="complete1"> Yes, I'm done.</label><br>
                                 <input type="checkbox" id="incomplete1" name="incomplete1" value="No">
                                 <label for="incomplete1"> No, not yet.</label><br>   <!use if statements to display these when yes or no is selected>
-                                <input type="submit" value="Submit">
+<!--                                <input type="submit" value="Submit">-->
+                                <button style="justify-content: center;" onclick="taskfunction()">Submit</button>
                             </form></td>
                         <td>smth</td>
                         <td>smth</td>
@@ -106,3 +107,15 @@
 
 
 </html>
+<script>
+    function taskfunction() {
+        var myText = "You have done the task!"
+        alert (myText)
+        // if ("complete" == 'Yes') {
+        //     alert("Well Done!");
+        // }
+
+    }
+
+
+</script>
